2006-12-19  Bruno Haible  <bruno@clisp.org>

	* m4/termcap.m4 (gl_TERMCAP, gl_TERMCAP_BODY): Rename cache variables.

2006-12-17  Bruno Haible  <bruno@clisp.org>

	* lib/diffseq.h: New file, extracted from fstrcmp.c and GNU diff's
	analyze.c.
	* lib/fstrcmp.c: Use it.
	* modules/fstrcmp (Files): Add lib/diffseq.h.

2006-12-17  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c: Make generic.
	(EXTRA_CONTEXT_FIELDS, NOTE_DELETE, NOTE_INSERT): New macros.

2006-10-07  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c: Include minmax.h.
	* modules/fstrcmp (Depends-on): Add minmax.

	* lib/fstrcmp.c (IF_LINT): New macro.

	* lib/fstrcmp.c: Make comments and variable syntax closer to GNU
	diff's analyze.c.

	* lib/fstrcmp.c: Fix FSF address in copyright header.

	* lib/fstrcmp.c: Rename macro MINUS_H_FLAG to USE_HEURISTIC. Use bool.

	* lib/fstrcmp.c: Update comments. Talk about vectors instead of
	strings, and about elements instead of characters.

	* lib/fstrcmp.c: Make generic.
	(OFFSET_MAX): New macro.

	* lib/fstrcmp.c: Modernize the coding style.

	* lib/fstrcmp.c: Include <stdbool.h>. Use bool where appropriate.
	Rename 'minimal' to 'find_minimal'.

	* lib/fstrcmp.c: Make generic.
	(ELEMENT, EQUAL, OFFSET): New macros.

2006-12-17  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c (diag): Change return type to void.
	(compareseq): Remove verification that the change count is > 1.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* m4/termcap.m4 (gl_TERMCAP_BODY): Also test for the terminfo
	functions.
	* lib/termcap.h (setupterm, tigetnum, tigetflag, tigetstr): New
	declarations.
	* lib/term-ostream.oo.c (xstrdup0) [HAVE_TERMINFO]: Handle (char*)-1
	return value from tigetstr.
	(term_ostream_create) [HAVE_TERMINFO]: Prefer the terminfo API.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c (term_ostream_create): Fix tgetstr argument
	for stream->no_color_video.

2006-12-16  Bruno Haible  <bruno@clisp.org>
