@@ -1,0 +1,27 @@
+Description:
+Information about terminal capabilities.
+
+Files:
+m4/terminfo.m4
+lib/tparm.c
+
+Depends-on:
+havelib
+c-ctype
+
+configure.ac:
+gl_TERMINFO
+
+Makefile.am:
+if GL_COND_LIBTOOL
+lib_LDFLAGS += $(LTLIBTERMINFO)
+endif
+
+Include:
+
+License:
+LGPL
+
+Maintainer:
+Bruno Haible
+
