@@ -1,5 +1,11 @@
 2006-12-19  Bruno Haible  <bruno@clisp.org>
 
+	* m4/terminfo.m4: New file.
+	* modules/terminfo: New file.
+	* Makefile.am (EXTRA_DIST): Add them.
+
+2006-12-19  Bruno Haible  <bruno@clisp.org>
+
 	* m4/termcap.m4 (gl_TERMCAP, gl_TERMCAP_BODY): Rename cache variables.
 
 2006-12-17  Bruno Haible  <bruno@clisp.org>
